# narbonne

./: CMakeLists.txt  README.md  README.txt  expectimax.cpp  expm_ai.cpp  rules.cpp  rules.hpp  search.cpp  search.hpp  server.cpp  server.hpp  simple.cpp  statcounter.hpp  tiles.cpp  tiles.hpp  util.cpp  util.hpp
scripts/: parallel.pl  parseres.sh  pkg.sh  replay.pl  sim2p.pl
